<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, UndergraduateActivity!</string>
    <string name="app_name">山财大学生助手</string>
    <string name="tabcalendar">日程</string>
    <string name="tabcurriculum">课程</string>
    <string name="tabconfig">配置</string>
    <string name="tabmore">刷新</string>
    <string name="logon_preferences">账号管理</string>
    <string name="logon_add_preferences">添加账号</string>
    <string name="logon_add_preferences_tip">添加账号后，别忘了点击设置才能生效</string>
    <string name="logon_identifier">账号标识</string>
    <string name="logon_identifier_settings">给自己随便起个名字吧!</string>
    <string name="logon_url">教务系统网址</string>
    <string name="logon_url_settings">http://123.232.100.110</string>
    <string name="logon_user">学号</string>
    <string name="logon_pass">密码</string>
    <string name="entranceyear">入学年份</string>
    <string name="entranceyear_hint">例如:2012</string>
    <string name="logon_check_settings">检查更新</string>
    <string name="logon_background_sync">后台刷新间隔</string>
    <string name="logoff_tips">您确定删除此帐号的信息？\n提示：只删除存储在手机内的信息，对教务系统的记录无任何影响</string>
    <string name="logoff_title">注销帐号</string>
    <string name="menu_done">保存</string>
    <string name="menu_set">设置</string>
    <string name="already_checked">已选择</string>
    <string name="cancel_button_title">取消</string>
    <string name="sync_interval_none">从不</string>
    <string name="sync_interval_1w">1周</string>
    <string name="sync_interval_1m">1月</string>
    <string name="sync_interval_2m">2月</string>
    <string name="sync_interval_3m">3月</string>
    <string name="scheduling_title">同步</string>
    <string name="scheduling_collapsed">单击显示同步选项</string>
    <string name="scheduling_expanded">单击关闭同步选项</string>
    <string name="scheduling_curriculum">同步课程表</string>
    <string name="scheduling_score">同步成绩</string>
    <string name="scheduling_update">刷新</string>
    <string name="thank_ruguozhai">感谢如果宅提供服务器支持</string>
    <string name="day1">星期一</string>
    <string name="day2">星期二</string>
    <string name="day3">星期三</string>
    <string name="day4">星期四</string>
    <string name="day5">星期五</string>
    <string name="day6">星期六</string>
    <string name="day7">星期日</string>
    <string name="norecord">没有课程</string>
    <string name="weekview">周视图</string>
    <string name="dayview">天视图</string>
    <string name="cemester_index_choose_preferences">选择后才能获取查看该学期课表成绩</string>
    <string name="cemester_start_preferences_tip">设置起始周，课程根据在起始终止周区间呈现</string>
    <string name="checkcode_hint">请输入验证码,点击验证码图片刷新</string>
    <string name="checkcode_tip">点击刷新验证码</string>
    <string name="checkcode_text">验证码</string>
    <string name="networkavailable">联网中</string>
    <string name="nonetwork">未联网</string>
    <string name="checknetwork">检查网络</string>
    <string name="nonetwork_toast">好像没有联网哦,无法更新数据</string>
    <string name="semesterindexvalue1">2009&#8211;2010|1</string>
    <string name="semesterindexvalue2">2009&#8211;2010|2</string>
    <string name="semesterindexvalue3">2010&#8211;2011|1</string>
    <string name="semesterindexvalue4">2010&#8211;2011|2</string>
    <string name="semesterindexvalue5">2011&#8211;2012|1</string>
    <string name="semesterindexvalue6">2011&#8211;2012|2</string>
    <string name="semesterindexvalue7">2012&#8211;2013|1</string>
    <string name="noscore">请单击右上角标志进行成绩下载</string>
    <string name="nocurriculum">请单击右上角标志进行课程下载</string>
    <string name="about">关于我们</string>
    <string name="authortitle">作者：</string>
    <string name="author">BasilWang</string>
    <string name="weibo">weibo.com/basilwang</string>
    <string name="developer">主程序员：</string>
    <string name="developer1">魏小兴</string>
    <string name="developer2">李玉刚 信息1001</string>
    <string name="developer3">李文飞 信息1001</string>
    <string name="developer4">相蕾 信息1001</string>
    <string name="developer5">许严 信息1001</string>
    <string name="developer6">朱胜男 信息1001</string>
    <string name="developer7">杨宇 信息1003</string>
    <string name="contributortitle">贡献者：</string>
    <string name="contributor1">SalenCao</string>
    <string name="contributor2">信息1001王潇</string>
    <string name="contributor3">李晓玉</string>
    <string name="contributor4">Xinran Huang</string>
    <string name="contributor5">Yujie Cao</string>
    <!-- <string name="contributor6">阿萌是小平weibo.com/u/1635069512</string> -->
    <string name="contributor7">Jing guo</string>
    <string name="contributor8">Wenjing Zhang</string>
    <string name="tip">如果您发现了Bug请反馈至ocam@163.com，我们表示感谢！</string>
    <string name="noaccount">您还没有创建或设置账号吧，亲</string>
    <string name="pleasecreateaccount">设置账号，亲</string>
    <string name="message_title">最新公告</string>
    <string name="test_title">考试安排</string>
    <string name="score_title">我的成绩</string>
    <string name="teach_title">教学计划</string>
    <string name="curriculmn_title">我的课表</string>
    <string name="motion_title">行为统计</string>
    <string name="errorpasswordmaybe">学号和密码以及验证码可能有误，请检查！</string>
    <string name="weekview_unlock">任务解锁</string>
    <string name="no_downloaded_semester">没有已经下载的课程表</string>
    <string name="downloaded_semester">已经下载的课程表</string>
    <string name="widget_loading">载入\u2026</string>
    <string name="set_semester_begindate">设置学期起始日期</string>
    <string name="set_semester_enddate">设置学期结束日期</string>
    <string name="shareonweibo">分享到微博</string>
    <string name="share_content">山财大学生助手可连接学校教务系统查询课程表，期末成绩， 学分，绩点。下载链接入口：
        木蚂蚁http://www.mumayi.com/android-120469.html，应用汇http://www.appchina.com/app/net.basilwang/。
        若果您有什么问题，请私信我们新浪微博或者人人主页@山财大学生助手，给我们留言，我们会尽最大努力为您服务。</string>
    <string name="text_to_share_hint">请评价我们的软件吧，如果您觉得做的好，请分享给您的好友吧</string>
    <string name="changing_fragments">Changing Fragments</string>
    <string name="title_activity_menu_change">MenuChange</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="message_content">通知内容</string>

</resources>