<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2009 Android Shuffle Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="4dip"
        android:paddingBottom="10dip" >

        <TextView
            android:id="@+id/user_identifier_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:text="@string/logon_identifier" />

        <EditText
            android:id="@+id/user_identifier"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:hint="@string/logon_identifier_settings"
            android:maxLength="250"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/user_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:text="@string/logon_user" />

        <EditText
            android:id="@+id/user"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:hint="@string/logon_user"
            android:maxLength="250"
            android:phoneNumber="true"
            android:singleLine="true" >
        </EditText>

        <!--
        <LinearLayout
            android:id="@+id/checkcode_panel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:text="@string/checkcode_text" />
 
                <ImageView
                    android:id="@+id/checkcode_image"
                    android:layout_width="60dp"
                    android:layout_height="22dp"
                    android:src="@drawable/checkcode"
                    android:contentDescription="@string/checkcode_tip"
                     />
            </LinearLayout>

            <EditText
                android:id="@+id/checkcode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:hint="@string/checkcode_hint"
                android:maxLength="250"
                android:phoneNumber="true"
                android:singleLine="true" >
            </EditText>
        </LinearLayout>
        -->

        <TextView
            android:id="@+id/pass_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:text="@string/logon_pass" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:hint="@string/logon_pass"
            android:inputType="textPassword"
            android:maxLength="250"
            android:singleLine="true" >
        </EditText>

        <TextView
            android:id="@+id/entranceyear_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:text="@string/entranceyear" />

        <EditText
            android:id="@+id/entranceyear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:hint="@string/entranceyear_hint"
            android:inputType="number"
            android:maxLength="4"
            android:singleLine="true" >
        </EditText>
        <!--
        <TextView
            android:id="@+id/url_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:text="@string/logon_url" />
        -->

        <EditText
            android:id="@+id/url"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:hint="@string/logon_url_settings"
            android:maxLength="250"
            android:singleLine="true" >
        </EditText>
        <!--
        <LinearLayout
            android:id="@+id/scheduling_section"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dip"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/scheduling_entry"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_selector_background"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:orientation="horizontal"
                android:paddingRight="?android:attr/scrollbarSize" >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dip"
                    android:layout_marginLeft="14dip"
                    android:layout_marginTop="6dip"
                    android:layout_weight="1"
                    android:duplicateParentState="true" >

                    <TextView
                        android:id="@+id/scheduling_label"
                        style="@style/LabelTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:duplicateParentState="true"
                        android:paddingLeft="0dp"
                        android:text="@string/scheduling_title" />

                    <TextView
                        android:id="@+id/scheduling_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/scheduling_label"
                        android:layout_below="@+id/scheduling_label"
                        android:duplicateParentState="true"
                        android:maxLines="2"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/label_color" />
                </RelativeLayout>

                <ImageButton
                    android:id="@+id/expand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/blank"
                    android:duplicateParentState="true"
                    android:src="@drawable/ic_expand_large_holo_light" />

                <ImageButton
                    android:id="@+id/collapse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/blank"
                    android:duplicateParentState="true"
                    android:src="@drawable/ic_collapse_large_holo_light"
                    android:visibility="gone" />
            </LinearLayout>

            <include
                android:id="@+id/scheduling_extra"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                layout="@layout/synchronize_editor"
                android:visibility="gone" />
        </LinearLayout>
        -->
        <!--
             <Button android:id="@+id/checkSettings" android:layout_width="fill_parent"
	    		android:text="@string/logon_check_settings"
	    		android:layout_height="wrap_content"
	    		android:hint="@string/logon_check_settings"
	    	    />
        -->
        <!--
	    <TextView android:id="@+id/pass_label"
	              android:layout_width="fill_parent"
	              android:layout_height="wrap_content"
	              android:layout_alignParentLeft="true"
	              android:layout_alignParentTop="true"
	              android:paddingLeft="5dip"
	              android:paddingRight="5dip"
	              android:text="@string/logon_background_sync"
	            />
	
	    <Spinner android:id="@+id/sync_interval"
	             android:layout_alignParentTop="true"
	             android:layout_width="fill_parent"
	         	 android:layout_height="48dip"
	             android:drawSelectorOnTop="true"
	             android:paddingTop="10dip"
	             android:paddingBottom="10dip"/>
        -->


        <!--
             <include
            android:id="@+id/save_panel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            layout="@layout/editor_save_panel" />
        -->

    </LinearLayout>

</ScrollView>